--- a/data/countries/de/ni/grafschaft-bentheim/data.yaml
+++ b/data/countries/de/ni/grafschaft-bentheim/data.yaml
@@ -38,4 +38,4 @@ district: Grafschaft Bentheim
 city: Schüttorf
 urls:
   - type: WEBSITE
-    url: https://www.gruene-schuettorf.de/
+    url: https://www.gruene-schuettorf.de/home/
